// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insertAfterImports addon-notes 1`] = `
"import React from 'react';

import BaseButton from '../components/BaseButton';
import markdownNotes from './notes/notes.md';
INSERT



const markdownString = '...';"
`;

exports[`insertAfterImports imports 1`] = `
"import './foo';
import './bar';
INSERT


whatever;"
`;

exports[`insertAfterImports multi-line imports 1`] = `
"import 'foo';
import {
  bar
} from 'baz';
INSERT


whatever;"
`;

exports[`insertAfterImports no imports 1`] = `
"
INSERT

foo bar;
baz;"
`;

exports[`insertAfterImports single-line imports 1`] = `
"import 'foo';
import { bar } from 'baz';
INSERT


whatever;"
`;
